--- a/project-Intership/src/app/employee/employee.component.html
+++ b/project-Intership/src/app/employee/employee.component.html
@@ -1,8 +1,9 @@
-<p>employee works!</p>
 
 <div *ngIf="myCount >= 18">
-    Bạn đã đủ 18+
-  </div>
-  <div *ngIf="myCount < 18">
-    Bạn chưa đủ 18+
-  </div>
+  Bạn đã đủ 18+
+</div>
+<div *ngIf="myCount < 18">
+Bạn chưa đủ 18+
+</div>
+<!-- <app-form-employee (voteSize)="countChange($event)"></app-form-employee> -->
+<app-form-employee></app-form-employee>
