--- a/project-Intership/src/app/employee/form-employee/form-employee.component.html
+++ b/project-Intership/src/app/employee/form-employee/form-employee.component.html
@@ -1,6 +1,6 @@
-<p>form-employee works!</p>
+<p>====================</p>
 
-<input type="text" [value] = "count">
+<input type="text" [value] = "counter">
 <br>
 <button type = "button" (click) = "ClickIncrease()">+</button>
 <br>
