--- a/project-Intership/src/app/employee/employee.component.html
+++ b/project-Intership/src/app/employee/employee.component.html
@@ -6,5 +6,5 @@
 Bạn chưa đủ 18+
 </div> -->
 <!-- <app-form-employee (voteSize)="countChange($event)"></app-form-employee> -->
-<app-form-employee></app-form-employee>
+<app-manage-employee></app-manage-employee>
 <!-- <app-manage-employee></app-manage-employee> -->
