--- a/project-Intership/src/app/employee/edit-employee/edit-employee.component.html
+++ b/project-Intership/src/app/employee/edit-employee/edit-employee.component.html
@@ -1,1 +1,1 @@
-<app-form-employee [id]="id" [type]="'edit'"></app-form-employee>
+<app-form-employee [id]="id" [type]="typeForm.edit"></app-form-employee>
