--- a/project-Intership/src/app/employee/manage-employee/manage-employee.component.html
+++ b/project-Intership/src/app/employee/manage-employee/manage-employee.component.html
@@ -27,7 +27,7 @@
             <td>
                 <i class="fa fa-eye main-text mr-2 cursor" aria-hidden="true" (click)="changeViewEmployee(u.userID)"></i>
                 <i class="fa fa-pencil main-text mr-2 cursor" aria-hidden="true" (click)="changeEditEmployee(u.userID)"></i>
-                <i class="fa fa-plus main-text cursor" aria-hidden="true" (click)="changeCreateEmployee()"></i>
+                <i class="fa fa-trash main-text cursor" aria-hidden="true" (click)="changeDeleteEmployee(u.userID)"></i>
             </td>
         </tr>
     </table>
