--- a/project-Intership/src/app/employee/view-employee/view-employee.component.html
+++ b/project-Intership/src/app/employee/view-employee/view-employee.component.html
@@ -1,1 +1,1 @@
-<app-form-employee [id]="id" [type]="'view'"></app-form-employee>
+<app-form-employee [id]="id" [type]="typeForm.view"></app-form-employee>
