--- a/project-Intership/src/app/employee/employee.component.html
+++ b/project-Intership/src/app/employee/employee.component.html
@@ -1,10 +1,1 @@
-
-<!-- <div *ngIf="myCount >= 18">
-  Bạn đã đủ 18+
-</div>
-<div *ngIf="myCount < 18">
-Bạn chưa đủ 18+
-</div> -->
-<!-- <app-form-employee (voteSize)="countChange($event)"></app-form-employee> -->
-<app-manage-employee></app-manage-employee>
-<!-- <app-manage-employee></app-manage-employee> -->
+<router-outlet></router-outlet>
